Experience section and Testimonial section

--- a/_includes/tools.html
+++ b/_includes/tools.html
@@ -1,7 +1,7 @@
 <section class="tools">
     <div class="flex flex-center">
         <div class="col-1">
-            <h3>The tools that help me help you...</h3>
+            <h3>The tools that power my work...</h3>
         </div>
         <div class="tool-grid">
             <div class="icon-row">
@@ -32,25 +32,25 @@
             </div>
             <div class="icon-row">
                 <div class="icon-div">
-                    <img class="logo" src="assets/img/logos/Bootstrap.png" alt="Bootstrap" title="Bootstrap">
+                    <img class="logo" src="assets/img/logos/Bootstrap.png" alt="Bootstrap">
                     <div class="overlay">
                         <a href="http://getbootstrap.com/" target="_blank" class="tool-name">Bootstrap</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo" src="assets/img/logos/Sass.png" alt="Sass" title="Sass">
+                    <img class="logo" src="assets/img/logos/Sass.png" alt="Sass">
                     <div class="overlay">
                         <a href="http://sass-lang.com/" target="_blank" class="tool-name">Sass</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/jekyll.png" alt="jekyll" title="jekyll">
+                    <img class="logo-wide" src="assets/img/logos/jekyll.png" alt="jekyll">
                     <div class="overlay">
                         <a href="http://jekyllrb.com/" target="_blank" class="tool-name">Jekyll</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo" src="assets/img/logos/GitHub.png" alt="GitHub" title="GitHub">
+                    <img class="logo" src="assets/img/logos/GitHub.png" alt="GitHub">
                     <div class="overlay">
                         <a href="https://github.com/" target="_blank" class="tool-name">GitHub</a>
                     </div>
@@ -58,51 +58,51 @@
             </div>
             <div class="icon-row">
                 <div class="icon-div">
-                    <img class="logo" src="assets/img/logos/Gulp.png" alt="Gulp" title="Gulp">
+                    <img class="logo" src="assets/img/logos/Gulp.png" alt="Gulp">
                     <div class="overlay">
                         <a href="http://gulpjs.com/" target="_blank" class="tool-name">Gulp</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/Nodejs.svg" alt="Node.js" title="Node.js">
+                    <img class="logo-wide" src="assets/img/logos/Nodejs.svg" alt="Node.js">
                     <div class="overlay">
                         <a href="https://nodejs.org/en/" target="_blank" class="tool-name">Node.js</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo" src="assets/img/logos/Git.png" alt="Git" title="Git">
+                    <img class="logo-wide" src="assets/img/logos/npm.svg" alt="npm">
                     <div class="overlay">
-                        <a href="https://git-scm.com/" target="_blank" class="tool-name">Git</a>
+                        <a href="https://www.npmjs.com/" target="_blank" class="tool-name">npm</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/php.png" alt="php" title="php">
+                    <img class="logo" src="assets/img/logos/Git.png" alt="Git">
                     <div class="overlay">
-                        <a href="http://php.net/" target="_blank" class="tool-name">PHP</a>
+                        <a href="https://git-scm.com/" target="_blank" class="tool-name">Git</a>
                     </div>
                 </div>
             </div>
             <div class="icon-row">
                 <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/Zend.png" alt="Zend" title="Zend">
+                    <img class="logo-wide" src="assets/img/logos/php.png" alt="php">
+                    <div class="overlay">
+                        <a href="http://php.net/" target="_blank" class="tool-name">PHP</a>
+                    </div>
+                </div>
+                <div class="icon-div">
+                    <img class="logo-wide" src="assets/img/logos/Zend.png" alt="Zend">
                     <div class="overlay">
                         <a href="https://framework.zend.com/" target="_blank" class="tool-name">Zend</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/MySQL.png" alt="MySQL" title="MySQL">
+                    <img class="logo-wide" src="assets/img/logos/MySQL.png" alt="MySQL">
                     <div class="overlay">
                         <a href="https://www.mysql.com/" target="_blank" class="tool-name">MySQL</a>
                     </div>
                 </div>
                 <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/AJAX.png" alt="AJAX" title="AJAX">
-                    <div class="overlay">
-                        <a href="https://developer.mozilla.org/en-US/docs/AJAX/Getting_Started" target="_blank" class="tool-name">AJAX</a>
-                    </div>
-                </div>
-                <div class="icon-div">
-                    <img class="logo-wide" src="assets/img/logos/Python.svg" alt="Python" title="Python">
+                    <img class="logo-wide" src="assets/img/logos/Python.svg" alt="Python">
                     <div class="overlay">
                         <a href="https://www.python.org/" target="_blank" class="tool-name">Python</a>
                     </div>
