--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -58,7 +58,11 @@ hr
   margin: 10px 0 30px
   height: 0
 
-
+li
+    color: hsl(0, 0%, 57%)
+    font-size: 15px
+    line-height: 1.5
+    letter-spacing: 0.5px
 
 // Links
 
@@ -107,13 +111,14 @@ body
         font-size: 32px
     h4
         font-size: 18px
-    p
+    p, li
         font-size: 13px
+
 
 @media (max-width: 412px)
     h3
         font-size: 26px
     h4
         font-size: 16px
-    p
+    p, li
         font-size: 12px
