--- a/assets/css/3-sections/experience.sass
+++ b/assets/css/3-sections/experience.sass
@@ -1,14 +1,11 @@
 section.experience
-    margin-top: 80px
+    margin: 80px 0 0 0
+    .flex
+        margin-top: 0px
     .col-1
         flex-direction: column
         text-align: center
         margin-right: 50px
-        p
-            font-size: 13px
-            margin-top: 10px
-    .quote
-        margin-top: 25px
     .palmberg-logo
         width: 270px
         height: auto
@@ -17,3 +14,5 @@ section.experience
         align-items: flex-start
         justify-content: flex-start
         margin-left: 40px
+        ul
+            margin-top: 0
