--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -3,16 +3,16 @@
     <div class="flex flex-center">
         <div class="col-1">
             <img class="palmberg-logo" src="assets/img/Palmberg.png" alt="Palmberg">
-            <div class="quote">
-                <img src="assets/img/quote.png" style="width: 20px; height: auto; margin-bottom: 10px;"><br>
-                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
-                <p><strong>Joern Klose, Director of Information Technology</strong></p>
-            </div>
         </div>
         <div class="col-2">
-            <h4>PALMBERG Büroeinrichtungen + Service GmbH</h4>
+            <h4>PALMBERG B&uuml;roeinrichtungen + Service GmbH</h4>
             <p>PALMBERG is one of the most important companies in the German office furniture industry today and successfully produces high-quality and contemporary office solutions for the European market.</p>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>During my internship I was entrusted with overseeing a project by the name of "Gasfedertischkonfigurator". This encompassed :</p><ul>
+                <li>Full-stack development of a web application for retailers.</li>
+                <li>Programming with PHP, HTML and JavaScript.</li>
+                <li>Generating a PDF document with PHP.</li>
+                <li>Use of databases (MySQL).</li>
+            </ul>
         </div>
     </div>
 </section>
