--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,5 +10,6 @@
 @import "3-sections/services";
 @import "3-sections/tools";
 @import "3-sections/experience";
+@import "3-sections/testimonial";
 
 @import "4-layouts/home";
