Experience, Testimonial, Projects section

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -2,17 +2,17 @@
     <h3>What I bring to the table...</h3>
     <div class="flex flex-center">
         <div class="col-1">
-            <img class="service-icon" src="assets/img/design.png" alt="Web-Design">
+            <img class="service-icon" src="assets/img/service-icons/design.png" alt="Web-Design">
             <h4>Web Design</h4>
             <p>I establish the key concepts of the project and design a <strong>responsive</strong> layout that will best facilitate the most important aspect of the web page, your <strong>content</strong>.</p>
         </div>
         <div class="col-1">
-            <img class="service-icon" src="assets/img/front-end.png" alt="Front-end">
+            <img class="service-icon" src="assets/img/service-icons/front-end.png" alt="Front-end">
             <h4>Front-end Development</h4>
             <p>Whether I'm using front-end frameworks or coding the structure from scratch, <strong>usability</strong> and <strong>performance</strong> are what I keep in mind when developing client-side.</p>
         </div>
         <div class="col-1">
-            <img class="service-icon" src="assets/img/back-end.png" alt="Back-end">
+            <img class="service-icon" src="assets/img/service-icons/back-end.png" alt="Back-end">
             <h4>Back-end Development</h4>
             <p>By using object oriented programming I keep my server-side scripts organized and <strong>reusable</strong> which make maintaining and extending parts of the application easier.</p>
         </div>
