--- a/assets/css/3-sections/testimonial.sass
+++ b/assets/css/3-sections/testimonial.sass
@@ -2,14 +2,14 @@ section.testimonial
     display: flex
     align-items: center
     justify-content: center
-    padding: 30px 0
+    padding: 30px 0 90px 0
     .flex
         border-radius: 10px
-        padding: 20px 30px 10px 30px
-        max-width: 800px
-        margin-top: 0
+        padding: 15px 25px 5px 25px
+        max-width: 820px
+        margin: 0 20px
         background:
-            image: url(../img/testimonial-bg.jpg)
+            image: url(../img/experience/testimonial-bg.jpg)
             position: center center
             size: cover
         .col-3
@@ -19,3 +19,16 @@ section.testimonial
             p
                 font-size: 14px
                 color: #fff
+
+    @media (max-width: 767px)
+        .flex
+            .col-3
+                p
+                    font-size: 12px
+    @media (max-width: 767px)
+        .flex
+            margin: 0 10px
+            padding: 10px 10px 0 10px
+@media (max-width: 640px)
+    section.testimonial
+        padding: 10px 0 60px 0
