--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,5 +11,6 @@
 @import "3-sections/tools";
 @import "3-sections/experience";
 @import "3-sections/testimonial";
+@import "3-sections/projects";
 
 @import "4-layouts/home";
