--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -2,12 +2,13 @@
     <h3>Experience...</h3>
     <div class="flex flex-center">
         <div class="col-1">
-            <img class="palmberg-logo" src="assets/img/Palmberg.png" alt="Palmberg">
+            <img class="palmberg-logo" src="assets/img/experience/Palmberg.png" alt="Palmberg">
         </div>
         <div class="col-2">
             <h4>PALMBERG B&uuml;roeinrichtungen + Service GmbH</h4>
             <p>PALMBERG is one of the most important companies in the German office furniture industry today and successfully produces high-quality and contemporary office solutions for the European market.</p>
-            <p>During my internship I was entrusted with overseeing a project by the name of "Gasfedertischkonfigurator". This encompassed :</p><ul>
+            <p>During my internship in the IT department I was entrusted with overseeing a project by the name of "Gasfedertischkonfigurator". This encompassed the following :</p>
+            <ul>
                 <li>Full-stack development of a web application for retailers.</li>
                 <li>Programming with PHP, HTML and JavaScript.</li>
                 <li>Generating a PDF document with PHP.</li>
