--- a/assets/css/3-sections/about.sass
+++ b/assets/css/3-sections/about.sass
@@ -26,7 +26,10 @@ section.about
 
 @media (max-width: 1024px)
     section.about
+        padding: 40px 0 40px 0
         .about-content
+            padding: 0
+            margin: 0px 20px
             border: none
 @media (max-width: 767px)
     section.about
@@ -38,7 +41,9 @@ section.about
             margin-bottom: 30px
 @media (max-width: 640px)
     section.about
-        padding: 30px 0 0px 0
+        padding-top: 30px
+        .about-content
+            padding: 0
         .profile-pic
             width: 150px
         .col-1
