--- a/assets/css/3-sections/experience.sass
+++ b/assets/css/3-sections/experience.sass
@@ -1,11 +1,14 @@
 section.experience
-    margin: 80px 0 0 0
+    margin-top: 80px
+    h3
+        margin-bottom: 20px
     .flex
         margin-top: 0px
     .col-1
         flex-direction: column
         text-align: center
         margin-right: 50px
+        margin-left: 20px
     .palmberg-logo
         width: 270px
         height: auto
@@ -14,5 +17,30 @@ section.experience
         align-items: flex-start
         justify-content: flex-start
         margin-left: 40px
+        margin-right: 20px
         ul
             margin-top: 0
+
+@media (max-width: 920px)
+    section.experience
+        .col-1
+            margin-right: 20px
+        .col-2
+            margin-left: 20px
+@media (max-width: 767px)
+    section.experience
+        .palmberg-logo
+            width: 220px
+            height: auto
+@media (max-width: 640px)
+    section.experience
+        margin-top: 50px
+        .palmberg-logo
+            width: 200px
+            height: auto
+        .col-1
+            margin: 40px 20px 20px 20px
+        .col-2
+            align-items: center
+            justify-content: center
+            margin: 0px 20px
