--- a/assets/css/3-sections/tools.sass
+++ b/assets/css/3-sections/tools.sass
@@ -16,7 +16,6 @@ section.tools
         flex-direction: column
         max-width: 600px
         margin-right: 15px
-        //background: lightblue
     .icon-row
         display: flex
         flex-direction: row
@@ -28,7 +27,6 @@ section.tools
         justify-content: center
         width: 150px
         height: 100px
-        //border: 0.1px solid #cccccc
         @media (max-width: 890px)
             width: 110px
         @media (max-width: 767px)
@@ -72,6 +70,7 @@ section.tools
 @media (max-width: 640px)
     section.tools
         margin-top: 0px
+        padding-bottom: 40px
         .flex
             margin-top: 0px
         .col-1
