--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -691,8 +691,12 @@ section.about {
     margin: 0px 0px 50px 40px; }
 
 @media (max-width: 1024px) {
-  section.about .about-content {
-    border: none; } }
+  section.about {
+    padding: 40px 0 40px 0; }
+    section.about .about-content {
+      padding: 0;
+      margin: 0px 20px;
+      border: none; } }
 
 @media (max-width: 767px) {
   section.about .profile-pic {
@@ -704,7 +708,9 @@ section.about {
 
 @media (max-width: 640px) {
   section.about {
-    padding: 30px 0 0px 0; }
+    padding-top: 30px; }
+    section.about .about-content {
+      padding: 0; }
     section.about .profile-pic {
       width: 150px; }
     section.about .col-1 {
@@ -862,7 +868,8 @@ section.tools {
 
 @media (max-width: 640px) {
   section.tools {
-    margin-top: 0px; }
+    margin-top: 0px;
+    padding-bottom: 40px; }
     section.tools .flex {
       margin-top: 0px; }
     section.tools .col-1 {
@@ -872,7 +879,9 @@ section.tools {
       margin: 0; } }
 
 section.experience {
-  margin: 80px 0 0 0; }
+  margin-top: 80px; }
+  section.experience h3 {
+    margin-bottom: 20px; }
   section.experience .flex {
     margin-top: 0px; }
   section.experience .col-1 {
@@ -882,7 +891,8 @@ section.experience {
         -ms-flex-direction: column;
             flex-direction: column;
     text-align: center;
-    margin-right: 50px; }
+    margin-right: 50px;
+    margin-left: 20px; }
   section.experience .palmberg-logo {
     width: 270px;
     height: auto; }
@@ -900,9 +910,40 @@ section.experience {
     -webkit-justify-content: flex-start;
         -ms-flex-pack: start;
             justify-content: flex-start;
-    margin-left: 40px; }
+    margin-left: 40px;
+    margin-right: 20px; }
     section.experience .col-2 ul {
       margin-top: 0; }
+
+@media (max-width: 920px) {
+  section.experience .col-1 {
+    margin-right: 20px; }
+  section.experience .col-2 {
+    margin-left: 20px; } }
+
+@media (max-width: 767px) {
+  section.experience .palmberg-logo {
+    width: 220px;
+    height: auto; } }
+
+@media (max-width: 640px) {
+  section.experience {
+    margin-top: 50px; }
+    section.experience .palmberg-logo {
+      width: 200px;
+      height: auto; }
+    section.experience .col-1 {
+      margin: 40px 20px 20px 20px; }
+    section.experience .col-2 {
+      -webkit-box-align: center;
+      -webkit-align-items: center;
+          -ms-flex-align: center;
+              align-items: center;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center;
+      margin: 0px 20px; } }
 
 section.testimonial {
   display: -webkit-box;
@@ -917,14 +958,14 @@ section.testimonial {
   -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 30px 0; }
+  padding: 30px 0 90px 0; }
   section.testimonial .flex {
     -webkit-border-radius: 10px;
             border-radius: 10px;
-    padding: 20px 30px 10px 30px;
-    max-width: 800px;
-    margin-top: 0;
-    background-image: url(../img/testimonial-bg.jpg);
+    padding: 15px 25px 5px 25px;
+    max-width: 820px;
+    margin: 0 20px;
+    background-image: url(../img/experience/testimonial-bg.jpg);
     background-position: center center;
     background-size: cover; }
     section.testimonial .flex .col-3 {
@@ -934,6 +975,70 @@ section.testimonial {
       section.testimonial .flex .col-3 p {
         font-size: 14px;
         color: #fff; }
+  @media (max-width: 767px) {
+    section.testimonial .flex .col-3 p {
+      font-size: 12px; } }
+  @media (max-width: 767px) {
+    section.testimonial .flex {
+      margin: 0 10px;
+      padding: 10px 10px 0 10px; } }
+
+@media (max-width: 640px) {
+  section.testimonial {
+    padding: 10px 0 60px 0; } }
+
+section.projects {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 40px 0 80px 0;
+  background: #f2f2f2; }
+  section.projects .flex {
+    margin-top: 20px; }
+  section.projects .col-1 {
+    position: relative;
+    max-width: 375px; }
+  section.projects .project-thumbnail {
+    width: 100%;
+    height: auto; }
+  section.projects .project-overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    -webkit-transition: .5s ease;
+    transition: .5s ease;
+    background-color: #575859; }
+  section.projects .col-1:hover .project-overlay {
+    opacity: 0.9; }
+  section.projects .project-name {
+    text-align: center;
+    color: white;
+    font-size: 18px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%); }
 
 .flex {
   display: -webkit-box;
