--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -6,8 +6,7 @@
         </div>
         <div class="col-2">
             <h4>PALMBERG B&uuml;roeinrichtungen + Service GmbH</h4>
-            <p>PALMBERG is one of the most important companies in the German office furniture industry today and successfully produces high-quality and contemporary office solutions for the European market.</p>
-            <p>During my internship in the IT department I was entrusted with overseeing a project by the name of "Gasfedertischkonfigurator". This encompassed the following :</p>
+            <p>PALMBERG is one of the most important companies in the German office furniture industry today and successfully produces high-quality and contemporary office solutions for the European market. During my internship in the IT department I was entrusted with overseeing a project encompassing the following :</p>
             <ul>
                 <li>Full-stack development of a web application for retailers.</li>
                 <li>Programming with PHP, HTML and JavaScript.</li>
