--- a/assets/css/3-sections/about.sass
+++ b/assets/css/3-sections/about.sass
@@ -42,6 +42,7 @@ section.about
 @media (max-width: 640px)
     section.about
         padding-top: 30px
+        padding-bottom: 0px
         .about-content
             padding: 0
         .profile-pic
