--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,5 +12,7 @@
 @import "3-sections/experience";
 @import "3-sections/testimonial";
 @import "3-sections/projects";
+@import "3-sections/contact";
+@import "3-sections/footer";
 
 @import "4-layouts/home";
