--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -2,28 +2,25 @@
     <h3>Front-end projects...</h3>
     <div class="flex flex-center">
         <div class="col-1">
-            <img class="project-thumbnail" src="assets/img/project-thumbnails/javascript-calculator.png" alt="JavaScript Calculator">
-            <!--<div class="project-overlay">
-                <a href="http://codepen.io/mokada42991/full/ZLRgOE/" target="_blank" class="project-name">JavaScript Calculator</a>
-            </div>-->
+            <div class="project-thumbnail">
+                <img class="project-image" src="assets/img/project-thumbnails/javascript-calculator.png" alt="JavaScript Calculator">
+            </div>
             <h4>JavaScript Calculator</h4>
-            <a href="http://codepen.io/mokada42991/full/ZLRgOE/" target="_blank" class="link-button">Check it out!</a>
+            <a href="http://codepen.io/mokada42991/full/ZLRgOE/" target="_blank" class="link-button">Check it out</a>
         </div>
         <div class="col-1">
-            <img class="project-thumbnail" src="assets/img/project-thumbnails/random-quote-machine.png" alt="Random Quote Machine">
-            <!--<div class="project-overlay">
-                <a href="http://codepen.io/mokada42991/full/NRgPvq/" target="_blank" class="project-name">Random Quote Machine</a>
-            </div>-->
+            <div class="project-thumbnail">
+                <img class="project-image" src="assets/img/project-thumbnails/random-quote-machine.png" alt="Random Quote Machine">
+            </div>
             <h4>Random Quote Machine</h4>
-            <a href="http://codepen.io/mokada42991/full/NRgPvq/" target="_blank" class="link-button">Check it out!</a>
+            <a href="http://codepen.io/mokada42991/full/NRgPvq/" target="_blank" class="link-button">Check it out</a>
         </div>
         <div class="col-1">
-            <img class="project-thumbnail" src="assets/img/project-thumbnails/wikipedia-viewer.png" alt="Wikipedia Viewer">
-            <!--<div class="project-overlay">
-                <a href="http://codepen.io/mokada42991/full/qqRqao/" target="_blank" class="project-name">Wikipedia Viewer</a>
-            </div>-->
+            <div class="project-thumbnail">
+                <img class="project-image" src="assets/img/project-thumbnails/wikipedia-viewer.png" alt="Wikipedia Viewer">
+            </div>
             <h4>Wikipedia Viewer</h4>
-            <a href="http://codepen.io/mokada42991/full/qqRqao/" target="_blank" class="link-button">Check it out!</a>
+            <a href="http://codepen.io/mokada42991/full/qqRqao/" target="_blank" class="link-button">Check it out</a>
         </div>
     </div>
 </section>
