--- a/assets/css/3-sections/projects.sass
+++ b/assets/css/3-sections/projects.sass
@@ -14,30 +14,17 @@ section.projects
         margin-bottom: 20px
     .project-thumbnail
         width: 100%
-        height: auto
-        border-radius: 10px
-    //.project-overlay
-        position: absolute
-        top: 0
-        bottom: 0
-        left: 0
-        right: 0
         height: 100%
-        width: 100%
+        overflow: hidden
         border-radius: 10px
-        opacity: 0
-        transition: .5s ease
-        background-color: rgb(87, 88, 89)
-    //.col-1:hover .project-overlay
-        opacity: 0.9
-    //.project-name
-        text-align: center
-        color: white
-        font-size: 18px
-        position: absolute
-        top: 50%
-        left: 50%
-        transform: translate(-50%, -50%)
+    .project-image
+        position: relative
+        width: 100%
+        height: 100%
+        border-radius: 10px
+        transition: all 0.3s ease-in-out
+    .project-image:hover
+        transform: scale(1.1)
     .link-button
         font-size: 18px
         font-weight: bold
@@ -54,6 +41,17 @@ section.projects
         color: white
         background: rgb(28, 38, 44)
         padding: 10px 40px
-    @media (max-width: 412px)
+    @media (max-width: 767px)
         .link-button
             font-size: 15px
+@media (max-width: 800px)
+    section.projects
+        h4
+            font-size: 17px
+@media (max-width: 640px)
+    section.projects
+        padding: 30px 0 0 0
+        .flex
+            margin-top: 10px
+        .col-1
+            margin-bottom: 50px
