--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,30 @@
 <section class="footer">
     <div class="flex flex-center">
         <div class="col-3">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <div class="social-row">
+                <a href="https://www.facebook.com/masami.okada" target="_blank">
+                    <div class="social-div">
+                        <img class="social-media-icon" src="assets/img/social-media-icons/facebook.png">
+                    </div>
+                </a>
+                <a href="https://www.linkedin.com/" target="_blank">
+                    <div class="social-div">
+                        <img class="social-media-icon"  src="assets/img/social-media-icons/linkedin.png">
+                    </div>
+                </a>
+                <a href="https://github.com/mokada42991" target="_blank">
+                    <div class="social-div">
+                        <img class="social-media-icon"  src="assets/img/social-media-icons/github.png">
+                    </div>
+                </a>
+                <a href="http://codepen.io/mokada42991/" target="_blank">
+                    <div class="social-div">
+                        <img class="social-media-icon"  src="assets/img/social-media-icons/codepen.png">
+                    </div>
+                </a>
+            </div>
+            <p>Designed and developed by Masami Okada &copy 2017</p>
+            <p>Icons made by <a href="http://www.flaticon.com/authors/freepik" target="_blank">Freepik</a> from <a href="http://www.flaticon.com/" target="_blank">www.flaticon.com</a></p>
         </div>
     </div>
 </section>
