--- a/assets/css/3-sections/contact.sass
+++ b/assets/css/3-sections/contact.sass
@@ -16,7 +16,7 @@ section.contact
         letter-spacing: 1px
         color: white
         text-align: center
-        padding: 10px 30px
+        padding: 15px 30px
         border: 2px solid white
         border-radius: 50px
         transition: all 0.3s ease-in-out
@@ -25,7 +25,7 @@ section.contact
         font-weight: bold
         color: rgb(28, 38, 44)
         background: white
-        padding: 10px 40px
+        padding: 15px 40px
     .mail-arrow
         margin-left: 80px
         margin-top: 30px
@@ -57,6 +57,9 @@ section.contact
             font-size: 26px
         .mail-arrow
             margin-left: 65px
+    @media (max-width: 640px)
+        .flex
+            padding: 30px 0 80px 0
     @media (max-width: 540px)
         h3
             font-size: 26px
@@ -64,6 +67,9 @@ section.contact
             font-size: 22px
     @media (max-width: 412px)
         .mail-button
-            font-size: 18px
+            font-size: 16px
+            padding: 10px 20px
+        .mail-button:hover
+            padding: 10px 30px
         .mail-arrow
             margin-left: 55px
