--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1089,7 +1089,7 @@ section.contact {
     letter-spacing: 1px;
     color: white;
     text-align: center;
-    padding: 10px 30px;
+    padding: 15px 30px;
     border: 2px solid white;
     -webkit-border-radius: 50px;
             border-radius: 50px;
@@ -1100,7 +1100,7 @@ section.contact {
     font-weight: bold;
     color: #1c262c;
     background: white;
-    padding: 10px 40px; }
+    padding: 15px 40px; }
   section.contact .mail-arrow {
     margin-left: 80px;
     margin-top: 30px;
@@ -1142,6 +1142,9 @@ section.contact {
       font-size: 26px; }
     section.contact .mail-arrow {
       margin-left: 65px; } }
+  @media (max-width: 640px) {
+    section.contact .flex {
+      padding: 30px 0 80px 0; } }
   @media (max-width: 540px) {
     section.contact h3 {
       font-size: 26px; }
@@ -1149,7 +1152,10 @@ section.contact {
       font-size: 22px; } }
   @media (max-width: 412px) {
     section.contact .mail-button {
-      font-size: 18px; }
+      font-size: 16px;
+      padding: 10px 20px; }
+    section.contact .mail-button:hover {
+      padding: 10px 30px; }
     section.contact .mail-arrow {
       margin-left: 55px; } }
 
@@ -1158,6 +1164,73 @@ section.footer {
   section.footer .flex {
     margin: 0;
     padding: 50px 0; }
+  section.footer .col-3 {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center; }
+  section.footer .social-row {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    margin-bottom: 30px; }
+  section.footer .social-div {
+    margin: 30px;
+    padding: 20px;
+    border: 2px solid white;
+    -webkit-border-radius: 20px;
+            border-radius: 20px;
+    opacity: 0.2;
+    -webkit-transition: .5s ease;
+    transition: .5s ease; }
+  section.footer .social-div:hover {
+    opacity: 1;
+    cursor: pointer; }
+  section.footer .social-media-icon {
+    width: 25px; }
+  section.footer p {
+    font-size: 12px; }
+  section.footer a {
+    -webkit-transition: .5s ease;
+    transition: .5s ease; }
+  section.footer a:hover {
+    color: white; }
+  @media (max-width: 520px) {
+    section.footer .social-div {
+      margin: 15px;
+      padding: 15px; }
+    section.footer .social-media-icon {
+      width: 20px; } }
+  @media (max-width: 350px) {
+    section.footer .social-div {
+      margin: 10px;
+      padding: 10px;
+      -webkit-border-radius: 15px;
+              border-radius: 15px; }
+    section.footer .social-media-icon {
+      width: 15px; }
+    section.footer p {
+      font-size: 10px; } }
 
 .flex {
   display: -webkit-box;
