jQuery Easing Plugin added

--- a/assets/css/3-sections/tools.sass
+++ b/assets/css/3-sections/tools.sass
@@ -4,7 +4,7 @@ section.tools
     display: flex
     align-items: center
     justify-content: center
-    background: #f2f2f2
+    background: #e6e6e6
     .col-1
         max-width: 240px
         margin-left: 15px
@@ -51,9 +51,9 @@ section.tools
         width: 100%
         opacity: 0
         transition: .5s ease
-        background-color: rgb(87, 88, 89)
+        background-color: rgb(28, 38, 44)
     .icon-div:hover .overlay
-        opacity: 0.95
+        opacity: 0.8
     .tool-name
         color: white
         font-size: 18px
