--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,10 +6,11 @@
         <title>Masami Okada | Web Developer</title>
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="assets/css/main.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-        <script src="assets/js/functions.js"></script>
     </head>
     <body>
         {{ content }}
     </body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="assets/js/functions.js"></script>
+    <script src="assets/js/jquery.easing.1.3.js"></script>
 </html>
