--- a/assets/css/3-sections/about.sass
+++ b/assets/css/3-sections/about.sass
@@ -3,7 +3,7 @@ section.about
     flex-direction: row
     align-items: center
     justify-content: center
-    background: #f2f2f2
+    background: #e6e6e6
     margin-top: 60px
     padding: 60px 0 70px 0
     .about-content
