--- a/assets/css/3-sections/projects.sass
+++ b/assets/css/3-sections/projects.sass
@@ -4,7 +4,7 @@ section.projects
     align-items: center
     justify-content: center
     padding: 40px 0 80px 0
-    background: #f2f2f2
+    background: #e6e6e6
     .flex
         margin-top: 20px
     .col-1
@@ -32,7 +32,7 @@ section.projects
         color: rgb(28, 38, 44)
         text-align: center
         padding: 10px 30px
-        border: 2px solid rgb(28, 38, 44)
+        border: 1.5px solid rgb(28, 38, 44)
         border-radius: 50px
         transition: all 0.3s ease-in-out
         cursor: pointer
