Back-to-Top button

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <section class="hero">
     <div class="hero-content">
         <h1>Hi, my name's Masami.</h1>
-        <h2>I'm a web developer based in Berlin, Germany.</h2>
+        <h2>I'm a web developer based in L&uuml;beck, Germany.</h2>
         <div class="hero-button">
             <a href="#contact" class="contact-button">Get in touch!</a>
         </div>
