--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>Masami Okada | Web Developer</title>
         <meta name="viewport" content="width=device-width">
+        <meta name="description" content="Masami Okada, Web Developer based in L&uuml;beck, Germany">
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
