--- a/_includes/testimonial.html
+++ b/_includes/testimonial.html
@@ -2,7 +2,7 @@
     <div class="flex flex-center">
         <div class="col-3">
             <img class="quote" src="assets/img/experience/quote-white.png">
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+            <p>Mr. Okada has an excellent grasp of the concepts which enables him to manage even the most difficult of tasks. His good judgement allows him to make well thought out proposals and implement them in our workflow.</p>
             <p><strong>J&ouml;rn Klose, Director of Information Technology</strong></p>
         </div>
     </div>
