--- a/assets/css/3-sections/footer.sass
+++ b/assets/css/3-sections/footer.sass
@@ -46,3 +46,41 @@ section.footer
             width: 15px
         p
             font-size: 10px
+.back-to-top
+    margin: 0
+    position: fixed
+    bottom: 20px
+    right: 20px
+    width: 60px
+    height: 60px
+    z-index: 100
+    display: none
+    color: #ffffff
+    opacity: 0.3
+    background-color: rgb(28, 38, 44)
+    border-radius: 10px
+    transition: all 0.3s ease-in-out
+    .back-to-top-arrow
+        margin-left: 18px
+        margin-top: 25px
+        position: absolute
+        width: 25px
+        height: 25px
+        border-right: 2px solid #d9d9d9
+        border-top: 2px solid #d9d9d9
+        transform: rotate(-45deg)
+        box-sizing: border-box
+.back-to-top:hover
+    opacity: 0.9
+
+@media (max-width: 640px)
+    .back-to-top
+        bottom: 15px
+        right: 15px
+        width: 40px
+        height: 40px
+        .back-to-top-arrow
+            margin-left: 13px
+            margin-top: 17px
+            width: 15px
+            height: 15px
