--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -499,7 +499,7 @@ body {
 body {
   background: white;
   font-size: 14px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif !important;
   color: #2E2D33;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
@@ -1030,13 +1030,7 @@ section.projects {
     width: 100%;
     height: 100%;
     -webkit-border-radius: 10px;
-            border-radius: 10px;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out; }
-  section.projects .project-image:hover {
-    -webkit-transform: scale(1.1);
-        -ms-transform: scale(1.1);
-            transform: scale(1.1); }
+            border-radius: 10px; }
   section.projects .link-button {
     font-size: 18px;
     font-weight: bold;
