--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="description" content="Masami Okada, Web Developer based in L&uuml;beck, Germany">
         <link rel="stylesheet" href="assets/css/main.css">
+        <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
     </head>
     <body>
         {{ content }}
