--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -101,7 +101,7 @@ body
   background: $bg-color
   font-size: 14px
   //line-height: 1.6
-  font-family: 'Raleway', sans-serif !important
+  font-family: 'Raleway', sans-serif
   color: $text-color
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: 100%
