--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -498,7 +498,7 @@ body {
 body {
   background: white;
   font-size: 14px;
-  font-family: 'Raleway', sans-serif !important;
+  font-family: 'Raleway', sans-serif;
   color: #2E2D33;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%; }
