--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -3,7 +3,7 @@
 .gigantic, .huge, .large, .bigger, .big,
 h1, h2, h3, h4, h5, h6
   color: $accent-color
-  font-weight: bold
+  font-weight: bolder
 
 .gigantic
   font-size: 110px
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6
   font-size: 68px
   text-align: center
   line-height: 1.2
-  //letter-spacing: -0.5px
+  letter-spacing: -0.5px
 
 .large, h2
   font-size: 42px
@@ -25,12 +25,14 @@ h1, h2, h3, h4, h5, h6
   color: rgb(28, 38, 44)
   line-height: 1.38
   text-align: center
+  letter-spacing: -0.5px
 
 .big, h4
   font-size: 22px
   color: rgb(28, 38, 44)
   line-height: 1.38
   text-align: center
+  letter-spacing: -0.5px
 
 .small, small
   font-size: 10px
@@ -50,6 +52,7 @@ em
 
 strong
   font-weight: bold
+  letter-spacing: -0.5px
 
 hr
   border: solid #ddd
