--- a/assets/css/3-sections/contact.sass
+++ b/assets/css/3-sections/contact.sass
@@ -22,10 +22,10 @@ section.contact
         transition: all 0.3s ease-in-out
         cursor: pointer
     .mail-button:hover
-        font-weight: bold
+        padding: 15px 40px
+        font-weight: 500
         color: rgb(28, 38, 44)
         background: white
-        padding: 15px 40px
     .mail-arrow
         margin-left: 80px
         margin-top: 30px
