--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -14,7 +14,7 @@ h1, h2, h3, h4, h5, h6
   font-size: 68px
   text-align: center
   line-height: 1.2
-  letter-spacing: -0.5px
+  letter-spacing: -2px
 
 .large, h2
   font-size: 42px
@@ -25,20 +25,18 @@ h1, h2, h3, h4, h5, h6
   color: rgb(28, 38, 44)
   line-height: 1.38
   text-align: center
-  letter-spacing: -0.5px
+  letter-spacing: -1px
 
 .big, h4
   font-size: 22px
   color: rgb(28, 38, 44)
   line-height: 1.38
   text-align: center
-  letter-spacing: -0.5px
+  letter-spacing: -1px
 
 .small, small
   font-size: 10px
   line-height: 1.2
-
-
 
 p
   margin: 0 0 20px 0
@@ -51,8 +49,7 @@ em
   font-style: italic
 
 strong
-  font-weight: bold
-  letter-spacing: -0.5px
+  font-weight: 600
 
 hr
   border: solid #ddd
