--- a/assets/css/3-sections/hero.sass
+++ b/assets/css/3-sections/hero.sass
@@ -37,10 +37,10 @@ section.hero
             transition: all 0.3s ease-in-out
             cursor: pointer
         .contact-button:hover
-            font-weight: bold
+            padding: 10px 40px
+            font-weight: 500
             color: #4a4c4f
             background: #fff
-            padding: 10px 40px
     @media (max-width: 767px)
         .hero-content
             h1
