Mobile font troubleshooting

--- a/assets/css/3-sections/contact.sass
+++ b/assets/css/3-sections/contact.sass
@@ -23,7 +23,7 @@ section.contact
         cursor: pointer
     .mail-button:hover
         padding: 15px 40px
-        font-weight: 500
+        font-weight: bold
         color: rgb(28, 38, 44)
         background: white
     .mail-arrow
