--- a/assets/css/3-sections/hero.sass
+++ b/assets/css/3-sections/hero.sass
@@ -28,7 +28,7 @@ section.hero
         .contact-button
             font-size: 18px
             font-weight: normal
-            letter-spacing: 1px
+            letter-spacing: 0.5px
             color: #fff
             text-align: center
             padding: 10px 30px
@@ -38,7 +38,7 @@ section.hero
             cursor: pointer
         .contact-button:hover
             padding: 10px 40px
-            font-weight: 500
+            font-weight: bold
             color: #4a4c4f
             background: #fff
     @media (max-width: 767px)
@@ -50,7 +50,7 @@ section.hero
     @media (max-width: 412px)
         .hero-content
             h1
-                font-size: 36px
+                font-size: 42px
             h2
                 font-size: 18px
             .contact-button
@@ -61,7 +61,7 @@ section.hero
     .learnMore-button
         font-size: 18px
         font-weight: normal
-        letter-spacing: 1px
+        letter-spacing: 0.5px
         color: #d9d9d9
         transition: all 0.3s ease-in-out
     .learnMore-arrow
