--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -565,7 +565,7 @@ section.hero {
     section.hero .hero-content .contact-button {
       font-size: 18px;
       font-weight: normal;
-      letter-spacing: 1px;
+      letter-spacing: 0.5px;
       color: #fff;
       text-align: center;
       padding: 10px 30px;
@@ -577,7 +577,7 @@ section.hero {
       cursor: pointer; }
     section.hero .hero-content .contact-button:hover {
       padding: 10px 40px;
-      font-weight: 500;
+      font-weight: bold;
       color: #4a4c4f;
       background: #fff; }
   @media (max-width: 767px) {
@@ -587,7 +587,7 @@ section.hero {
       font-size: 24px; } }
   @media (max-width: 412px) {
     section.hero .hero-content h1 {
-      font-size: 36px; }
+      font-size: 42px; }
     section.hero .hero-content h2 {
       font-size: 18px; }
     section.hero .hero-content .contact-button {
@@ -599,7 +599,7 @@ section.hero {
   .learnMore .learnMore-button {
     font-size: 18px;
     font-weight: normal;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     color: #d9d9d9;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out; }
@@ -1022,22 +1022,14 @@ section.projects {
     position: relative;
     max-width: 375px;
     margin-bottom: 20px; }
-  section.projects .project-thumbnail {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    -webkit-border-radius: 10px;
-            border-radius: 10px; }
   section.projects .project-image {
-    position: relative;
     width: 100%;
-    height: 100%;
+    height: 60%;
     -webkit-border-radius: 10px;
             border-radius: 10px; }
   section.projects .link-button {
     font-size: 18px;
     font-weight: bold;
-    letter-spacing: 1px;
     color: #1c262c;
     text-align: center;
     padding: 10px 30px;
@@ -1095,7 +1087,7 @@ section.contact {
     cursor: pointer; }
   section.contact .mail-button:hover {
     padding: 15px 40px;
-    font-weight: 500;
+    font-weight: bold;
     color: #1c262c;
     background: white; }
   section.contact .mail-arrow {
