--- a/assets/css/3-sections/projects.sass
+++ b/assets/css/3-sections/projects.sass
@@ -11,7 +11,7 @@ section.projects
         flex-direction: column
         position: relative
         max-width: 375px
-        margin-bottom: 20px
+        margin: 20px 10px
     .project-image
         width: 100%
         height: 60%
@@ -42,6 +42,6 @@ section.projects
     section.projects
         padding: 30px 0 0 0
         .flex
-            margin-top: 10px
+            margin: -20px 0 10px 0
         .col-1
-            margin-bottom: 50px
+            margin: 40px 10px
