--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -449,7 +449,7 @@ p {
   color: #919191;
   font-size: 15px;
   line-height: 1.5;
-  letter-spacing: 0.5px; }
+  letter-spacing: 0.4px; }
 
 em {
   font-style: italic; }
@@ -715,8 +715,6 @@ section.about {
     padding-bottom: 0px; }
     section.about .about-content {
       padding: 0; }
-    section.about .profile-pic {
-      width: 150px; }
     section.about .col-1 {
       margin: auto; }
     section.about .col-2 {
@@ -1021,7 +1019,7 @@ section.projects {
             flex-direction: column;
     position: relative;
     max-width: 375px;
-    margin-bottom: 20px; }
+    margin: 20px 10px; }
   section.projects .project-image {
     width: 100%;
     height: 60%;
@@ -1056,9 +1054,9 @@ section.projects {
   section.projects {
     padding: 30px 0 0 0; }
     section.projects .flex {
-      margin-top: 10px; }
+      margin: -20px 0 10px 0; }
     section.projects .col-1 {
-      margin-bottom: 50px; } }
+      margin: 40px 10px; } }
 
 section.contact {
   background: #606a74; }
