Contact info update

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
                 <img class="profile-pic" src="assets/img/profile-pic2.jpg" alt="Profile Pic">
             </div>
             <div class="col-2">
-                <p>I'm <strong>Masami Okada</strong> and I'm a self taught web developer currently based in <strong>L&uuml;beck</strong>, Germany. Having been born and raised in San Diego, California, I've travelled the world playing football for a living for over 10 years. I came across programming and web design on my search for an alternate career and since then I've lost myself deep in code.<br><br>I'm an eager <strong>learner</strong> and through an extensive online education and job experience, I've gained a broad knowledge spanning the full spectrum of web development. From simple and concise <strong>design</strong> to clean and reusable <strong>code</strong>, I work meticulously to craft a product that embodies the ideas and values of the project.</p>
+                <p>I'm <strong>Masami Okada</strong> and I'm a self taught web developer currently based in <strong>Berlin</strong>, Germany. Having been born and raised in San Diego, California, I've travelled the world playing football for a living for over 10 years. I came across programming and web design on my search for an alternate career and since then I've lost myself deep in code.<br><br>I'm an eager <strong>learner</strong> and through an extensive online education and job experience, I've gained a broad knowledge spanning the full spectrum of web development. From simple and concise <strong>design</strong> to clean and reusable <strong>code</strong>, I work meticulously to craft a product that embodies the ideas and values of the project.</p>
             </div>
         </div>
     </div>
