--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
         <div class="col-3">
             <h3>Want to hire me?<br>Work together?<br>Or just grab some coffee?</h3>
             <h4><span class="mail-arrow"></span>Send me an email!</h4>
-            <a href="mailto:mokada42991@gmail.com" class="mail-button">mokada42991@gmail.com</a>
+            <a href="mailto:masami.okada@gmx.de" class="mail-button">masami.okada@gmx.de</a>
         </div>
     </div>
 </section>
